featured bike section complete

--- a/index.html
+++ b/index.html
@@ -162,7 +162,15 @@
     <!-- Main section -->
      <main class="md:container mx-auto">
         <!-- featured bike section -->
-         <section>
+         <section class="text-center my-20 md:my-28">
+          <h1 class="text-3xl md:text-5xl font-semibold mb-3">Fetured Bikes In This Year</h1>
+          <p class="text-sm text-bike-primary font-semibold ">Best <span class="underline  underline-offset-4">bike colle</span>ction</p>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 justify-items-center mt-12 mb-8">
+            <img  src="images/others/feature-bike.png" alt="">
+            <img src="images/slider/bike3.png" alt="">
+            <img  src="images/others/feature-bike.png" alt="">
+
+          </div>
          </section>
          <!-- latest bike section -->
           <section class="my-24"> 
